# boo-rs

./: .gitignore  Cargo.toml
src/: app.rs  client.rs  events.rs  logging.rs  main.rs  message.rs  names.rs  request.rs  response.rs  room.rs  socket.rs  ui.rs  user.rs
src/app/: log.rs  message.rs  mod.rs  user.rs
src/events/: channel.rs  keyboard.rs  mod.rs  socket.rs
src/socket/: client.rs  mod.rs  refs.rs  request.rs  response.rs
src/ui/: format.rs  header.rs  input.rs  logs.rs  math.rs  messages.rs  mod.rs  rooms.rs  styles.rs  symbols.rs  users.rs
src/ui/widgets/: header.rs  help.rs  input.rs  logs.rs  messages.rs  mod.rs  rooms.rs  scrolbar.rs  sidebars.rs  users.rs
