[package]
name = "boo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
crossterm = "0.27.0"
ezsockets = { version = "0.6.2", features = ["tokio-rustls", "rustls"] }
rand = "0.8.5"
ratatui = "0.26.2"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
textwrap = "0.16.1"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.0"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
