[package]
name = "boo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
chrono = "0.4.38"
crossterm = "0.27.0"
ezsockets = { version = "0.6.2", features = ["tokio-rustls", "rustls"] }
fern = "0.6.2"
log = "0.4.21"
lorem-rustum = "0.0.5"
rand = "0.8.5"
ratatui = "0.26.3-alpha.2"
regex = "1.10.4"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
textwrap = "0.16.1"
tokio = { version = "1.37.0", features = ["full"] }
url = "2.5.0"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
